# Port69

./: .env.example  .gitignore  Dockerfile.server  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
cli/: config.py  main.py
cli/commands/: auth.py  social.py
cli/network/: client.py
cli/ui/: chat_ui.py  theme.py
server/: config.py  main.py
server/api/: endpoints.py
server/auth/: auth.py
server/database/: db.py
server/websocket/: manager.py
